# exa_robot

./: LICENSE  README.md
master_machine/src/command/: .exascript.swp  command_all  exarobot  exascript
master_machine/src/exa_arduino/: exa_arduino.ino
master_machine/src/exa_base/: CMakeLists.txt  package.xml
master_machine/src/exa_base/launch/: kinect_base_frame_tansform.launch
master_machine/src/exa_base/src/: base_broadcaste.cpp  camera_base_broadcaster.cpp  depth_base_broadcaster.cpp  geiger_base_broadcaster.cpp  odom_base_broadcaster.cpp
master_machine/src/exa_control/launch/: exa_controller.launch  exa_teleop.launch
master_machine/src/exa_control/src/: exa_frame_tf.cpp  exa_motor_controller.cpp
master_machine/src/exa_model/exa_cambase/: CMakeLists.txt  manifest.xml  model.config  package.xml
master_machine/src/exa_model/exa_cambase/launch/: display.launch  gazebo.launch
master_machine/src/exa_model/exa_cambase/meshes/: alink2.stl  alink4.stl  alink5.stl  alink6.stl  base.stl  clink1.stl  clink2.stl  mlink1.stl  mlink2.stl
master_machine/src/exa_model/exa_cambase/robots/: exa_cambase.urdf
master_machine/src/exa_model/exa_robot16/: CMakeLists.txt  manifest.xml  package.xml
master_machine/src/exa_model/exa_robot16/launch/: display.launch  gazebo.launch
master_machine/src/exa_model/exa_robot16/meshes/: base.stl  link1.stl  link3.stl  link6.stl  motor3.stl  motor4.stl
master_machine/src/exa_model/exa_robot16/meshes/Untitled Folder/: link1.stl  link2.stl  link3.stl  link4.stl  link5.stl  link6.stl  motor1.stl  motor2.stl  motor3.stl  motor4.stl
master_machine/src/exa_model/exa_robot16/robots/: exa_robot16.urdf
master_machine/src/exa_vision/: CMakeLists.txt  CMakeLists.txt.bak1  package.xml  package.xml.bak1
master_machine/src/exa_vision/launch/: exa_mapping.launch  exa_mapping.launch (copy).bak  exa_mapping_2.launch  freenect_throttle.launch  rtabmap.launch
master_machine/src/exa_vision/src/: data_getter.cpp  data_getter_loop1.cpp  data_getter_loop2.cpp  data_getter_loop3.cpp  exa_geiger_data_map.cpp  exa_geiger_data_map_new.cpp  exa_geriger_data_subscriber.cpp.bak  geiger_data_map.cpp.bak  geiger_data_receiver_standalone.cpp
master_machine/src/teleop_arduino/: rotary_encoder.h
robot/: README.md
robot/src/calibration_data_uvc_stereo_cam/: head_camera.yaml  left.yaml  ost.txt  right.yaml
robot/src/command/: exarobot  exascript  link_command  readme.txt
robot/src/exa_arduino/: exa_arduino.ino  exa_arduino.ino.bak
robot/src/exa_control/: CMakeLists.txt  package.xml
robot/src/exa_control/include/exa_control/: exa_motor_controller.h  exa_teleop.h
robot/src/exa_control/launch/: exa_teleop.launch
robot/src/exa_control/src/: exa_teleop.cpp
robot/src/exa_vision/: CMakeLists.txt
robot/src/exa_vision/launch/: openni_throttle.launch
robot/src/exa_vision/src/: exa_geiger_data_map.cpp  geiger_data_receiver_standalone.cpp
robot/src/geigermuller_conter/: geigermuller_conter.ino
robot/src/teleop_arduino/: teleop_arduino.ino
robot/src/twist_test/: twist_test.ino
